--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,13 +1,9 @@
 @import "~bulma/sass/utilities/initial-variables"
 
-// Config vars
-// Kalidi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
-$body-color: #333
+$primary: #334F70
+$primary-invert: #C5D7ED
+$body-color: #EAF1F7
 
 .navbar .navbar-menu
   box-shadow:none !important
